# SynthClaw

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
assets/: test.blend
config/: analyze_schema.json  render_schema.json
scripts/: agent_bridge.py  analyze_blends.py
src/synthclaw/: __init__.py  blender_skill.py
tests/: test_skills.py
